# brief

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agent-example.md  pyproject.toml
.claude/: settings.json
baml_src/: clients.baml  functions.baml
demos/: feature-demo.sh
docs/: AGENT_INSTRUCTIONS.md  DEV_NOTES.md  brief-basic-concept.md  brief-design.md  brief-workflow.md  commands.md  context-package-rules.md  embeddings-architecture.md  example_userflow.md  hooks-setup.md  tasks.jsonl  tracing-design.md  userflow_test_log.md
docs/archive/: brief-fix-implementation-2026-01-21.md  brief-gap-analysis-2026-01-21.md  brief-testing-session-2026-01-21.md  context-package-improvements-2026-01-21.md  multi-file-support-plan.md
docs/plans/: BRIEF_UTILIZATION_PLAN.md  TASK_PLAN_01.md
docs/status/: work-summary-2026-01-22.md
performance-testing/: PERFORMANCE_TESTING_PLAN.md  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  analyze.py  config.json  orchestrator.py  run_test.py  test_orchestrator.py
performance-testing/configs/: baseline.md  hooks-v1.md  hooks-v2.md  hooks-v3.md
performance-testing/docs/: ORCHESTRATOR_DESIGN.md  PERFORMANCE_TESTING_PLAN.md  dimension-externalization-plan.md  initial-exploration-results.md  performance-test-findings-v1.md  testing-notes.md
performance-testing/results/: manifest.jsonl
performance-testing/search-quality/: README.md  benchmark.json  configs.py  runner.py  scoring.py
performance-testing/test-files/: claude-md-baseline.md  claude-md-null.md
scripts/: brief-hook-warn.sh  demo-features.sh
scripts/hooks/: pre-compact.sh  pre-tool-use.sh  session-start.sh  user-prompt.sh
src/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/baml_src/: clients.baml  functions.baml
src/brief/: __init__.py  (+6 more)
tests/: __init__.py  test_analysis.py  test_cli.py  test_contracts.py  test_generation.py  test_markdown.py  test_memory.py  test_models.py  test_reporting.py  test_retrieval.py  test_search_quality.py  test_storage.py  test_tasks.py  test_tracing.py
(+63 files in other folders)
