[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brief"
version = "0.1.0"
description = "Context infrastructure for AI coding agents - deterministic context packages for convergent code generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BrenanL", email = "BrenanL@users.noreply.github.com"}
]
keywords = ["ai", "coding", "context", "agents", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
llm = [
    "baml-py>=0.50.0",
]
all = [
    "brief[dev,llm]",
]

[project.scripts]
brief = "brief.cli:app"

[project.urls]
Homepage = "https://github.com/BrenanL/brief"
Repository = "https://github.com/BrenanL/brief"
Documentation = "https://github.com/BrenanL/brief#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["brief*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["search_quality: search quality benchmarks (requires API key, not run by default)"]
addopts = "-m 'not search_quality'"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
